Add some minor enchancements

--- a/01. Basic CRUD Implementing The Read/01. Reading Data/GigHub/Views/Gigs/Mine.cshtml
+++ b/01. Basic CRUD Implementing The Read/01. Reading Data/GigHub/Views/Gigs/Mine.cshtml
@@ -6,7 +6,7 @@
 <main>
     <div class="row">
 
-        <h1>Mine</h1>
+        <h1>My Upcoming Gigs</h1>
         <ul class="gigs voffset-4">
             @foreach (var gig in Model)
             {
