--- a/02. Basic CRUD Implementing The Update/04. Updating Data/GigHub/Views/Gigs/GigForm.cshtml
+++ b/02. Basic CRUD Implementing The Update/04. Updating Data/GigHub/Views/Gigs/GigForm.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>@Model.Heading</h2>
-@using (Html.BeginForm("Create", "Gigs", FormMethod.Post))
+@using (Html.BeginForm(Model.Action, "Gigs", FormMethod.Post))
 {
     <p class="alert alert-info">All fields are <strong>required</strong>.</p>
     @Html.AntiForgeryToken()
